--- a/GDSSAssistant/Resources/layout/ConfigEditor.axml
+++ b/GDSSAssistant/Resources/layout/ConfigEditor.axml
@@ -2,6 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
+    <Button
+        android:text="&lt;&lt; Back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnBackConfigEdit"
+        android:background="@android:color/holo_blue_light"
+        android:layout_marginTop="5dip"
+        android:textColor="@android:color/black" />
+    <Button
+        android:text="Save Configuration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnSaveConfigEdit"
+        android:layout_marginTop="5dip"
+        android:textColor="@android:color/black"
+        android:background="@android:color/holo_green_light" />
+    <TextView
+        android:text="Configuration Details"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvHeaderConfigEdit"
+        android:layout_marginBottom="5dip"
+        android:textColor="@android:color/black" />
+    <TextView
+        android:text="Name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvNameConfigEdit"
+        android:textSize="25dip"
+        android:textColor="@android:color/holo_blue_dark" />
+    <EditText
+        android:inputType="textMultiLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etxtValueConfigEdit"
+        android:textSize="25dip"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
